force-app/main/default/objects/Transaction_Card__c/fields/Trip_Status__c.field-meta.xml
<CustomField>
    <fullName>Trip_Status__c</fullName>
    <label>סטטוס טיול</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>פנייה טכנית</fullName>
            </value>
            <value>
                <fullName>תזכורת בייטים</fullName>
            </value>
            <value>
                <fullName>תשלום בייטים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>