force-app/main/default/objects/Transaction_Card__c/fields/Two_week_discount__c.field-meta.xml
<CustomField>
    <fullName>Two_week_discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>שבועיים מתנה</label>
    <type>Checkbox</type>
</CustomField>