force-app/main/default/objects/Transaction_Card__c/fields/USD_to_ILS__c.field-meta.xml
<CustomField>
    <fullName>USD_to_ILS__c</fullName>
    <formula>If (Days_Of_Planned_Service__c &lt; 181 ,
(Cost_Calculated_Planned_N__c/(Days_Of_Planned_Service__c * Step_Price1__c) ) / ((1 - discount__c)) ,
((Cost_Calculated_Planned_N__c / (((Days_Of_Planned_Service__c-181) * Step_Price2__c) + (181 * Step_Price1__c))) / ((1 - discount__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USD_to_ILS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>