force-app/main/default/objects/Transaction_Card__c/fields/User_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Status__c</fullName>
    <description>This field will be populated by the service team, they will mark when the user is deactivated from the Balcony App.</description>
    <label>User Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>