force-app/main/default/objects/Transaction_Card__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>old formula: SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(

TRIM(Account_Passenger__r.FirstName+Account_Passenger__r.LastName+MID(Name, FIND(&apos;-&apos;, Name)+1  , LEN(Name))+ &apos;@Magnus.co.il&apos;)

, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</description>
    <formula>IF(
AND( DATEVALUE(CreatedDate)&gt; date(2017,12,31), DATEVALUE(CreatedDate)&lt; date(2018,1,5)
),
 Account_Passenger__r.PersonContact.Email , 
(SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
TRIM(Account_Passenger__r.FirstName+Account_Passenger__r.LastName+MID(Name, FIND(&apos;-&apos;, Name)+1  , LEN(Name))+ &apos;@Magnus.co.il&apos;)
, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם משתמש</label>
    <type>Text</type>
</CustomField>