force-app/main/default/objects/Transaction_Card__c/fields/validity__c.field-meta.xml
<CustomField>
    <fullName>validity__c</fullName>
    <label>תוקף</label>
    <length>5</length>
    <type>Text</type>
</CustomField>