force-app/main/default/objects/Transaction_Card__c/fields/Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MagnuSafety - will be marked once the email was sent</description>
    <label>Welcome Email Sent</label>
    <type>Checkbox</type>
</CustomField>