force-app/main/default/objects/Transaction_Card__c/fields/X10__c.field-meta.xml
<CustomField>
    <fullName>X10__c</fullName>
    <defaultValue>1</defaultValue>
    <label>סוללות אלקליין (10 בחב&apos;)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>