force-app/main/default/objects/Transaction_Card__c/fields/Zebra__c.field-meta.xml
<CustomField>
    <fullName>Zebra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zebra</label>
    <type>Checkbox</type>
</CustomField>