force-app/main/default/objects/Transaction_Card__c/validationRules/Cant_Change_The_Planned_Return_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_The_Planned_Return_Date</fullName>
    <active>false</active>
    <description>לא_ניתן_לעריכה_לאחר_שנמסר_מכשיר</description>
    <errorConditionFormula>TODAY()&gt; Date_Of_Delivery_Device__c &amp;&amp; ISCHANGED( Scheduled_Return_Date__c )</errorConditionFormula>
    <errorDisplayField>Scheduled_Return_Date__c</errorDisplayField>
    <errorMessage>לא ניתן לשנות את תאריך החזרה המתוכנן לאחר שנמסר המכשיר</errorMessage>
</ValidationRule>