force-app/main/default/objects/Transaction_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Passenger__c</columns>
    <columns>Account_Addressing__c</columns>
    <columns>TAaveler_phone__c</columns>
    <columns>Payee_id__c</columns>
    <columns>Status__c</columns>
    <columns>Manual_Transaction__c</columns>
    <columns>No_of_Payments__c</columns>
    <columns>IMEI__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Training_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Transaction_Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_Type_Name_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>לא מעוניין</value>
    </filters>
    <label>כל ההזמנות</label>
</ListView>