force-app/main/default/objects/Transaction_Card__c/listViews/Bad_payments.listView-meta.xml
<ListView>
    <fullName>Bad_payments</fullName>
    <columns>NAME</columns>
    <columns>Trainings__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Addressing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>חיובים בעייתיים</value>
    </filters>
    <label>חיובים בעייתיים</label>
    <language>iw</language>
</ListView>