force-app/main/default/objects/Transaction_Card__c/listViews/Client_approve.listView-meta.xml
<ListView>
    <fullName>Client_approve</fullName>
    <columns>NAME</columns>
    <columns>Account_Addressing__c</columns>
    <columns>All_Notes__c</columns>
    <columns>Source__c</columns>
    <columns>Date_Trip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>מחכה לאישור טופס</value>
    </filters>
    <label>מחכה לאישור טופס</label>
    <language>en_US</language>
</ListView>