force-app/main/default/objects/Transaction_Card__c/listViews/Magnus_Safety_B2C.listView-meta.xml
<ListView>
    <fullName>Magnus_Safety_B2C</fullName>
    <columns>NAME</columns>
    <columns>Account_Passenger__c</columns>
    <columns>Period_end__c</columns>
    <columns>Email_Forms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Transaction_Card__c.MAGNUSafety</value>
    </filters>
    <filters>
        <field>User_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Period_end__c</field>
        <operation>lessOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Magnus Safety - End Membership</label>
</ListView>