force-app/main/default/objects/Transaction_Card__c/listViews/MAGNUSafety.listView-meta.xml
<ListView>
    <fullName>MAGNUSafety</fullName>
    <columns>NAME</columns>
    <columns>Account_Passenger__c</columns>
    <columns>Email_Forms__c</columns>
    <columns>Period_Start__c</columns>
    <columns>Period_end__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Transaction_Card__c.MAGNUSafety</value>
    </filters>
    <filters>
        <field>Period_end__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>MAGNUSafety</label>
</ListView>