force-app/main/default/objects/Transaction_Card__c/listViews/Natbag_Dropoff.listView-meta.xml
<ListView>
    <fullName>Natbag_Dropoff</fullName>
    <columns>NAME</columns>
    <columns>Account_Passenger__c</columns>
    <columns>Acc_Addressing_phone_formula__c</columns>
    <columns>Date_Trip__c</columns>
    <columns>Return_Date_Updated__c</columns>
    <columns>Status__c</columns>
    <columns>Trainings__c</columns>
    <columns>All_Notes__c</columns>
    <columns>Myanmar__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Return_in_Natbag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Transaction_Card__c.Satelite</value>
    </filters>
    <label>החזרה בנתב&quot;ג</label>
    <language>en_US</language>
</ListView>