force-app/main/default/objects/Transaction_Card__c/listViews/Natbag_Pickup.listView-meta.xml
<ListView>
    <fullName>Natbag_Pickup</fullName>
    <columns>NAME</columns>
    <columns>Account_Passenger__c</columns>
    <columns>Acc_Addressing_phone_formula__c</columns>
    <columns>Date_Trip__c</columns>
    <columns>Status__c</columns>
    <columns>Trainings__c</columns>
    <columns>All_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>איסוף בנתב&quot;ג</label>
</ListView>