force-app/main/default/objects/Transaction_Card__c/listViews/Nepal.listView-meta.xml
<ListView>
    <fullName>Nepal</fullName>
    <columns>NAME</columns>
    <columns>Account_Passenger__c</columns>
    <columns>TAaveler_phone__c</columns>
    <columns>Date_Of_Delivery_Device__c</columns>
    <columns>Status__c</columns>
    <columns>IMEI__c</columns>
    <columns>All_Notes__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name_Text__c</field>
        <operation>equals</operation>
        <value>נפאל</value>
    </filters>
    <label>Nepal</label>
    <language>iw</language>
</ListView>