force-app/main/default/objects/Transaction_Card__c/listViews/pending_form_completion.listView-meta.xml
<ListView>
    <fullName>pending_form_completion</fullName>
    <columns>NAME</columns>
    <columns>Account_Passenger__c</columns>
    <columns>Date_Trip__c</columns>
    <columns>Status__c</columns>
    <columns>All_Notes__c</columns>
    <columns>Trainings__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>מילוי טופס</value>
    </filters>
    <label>מילוי טופס</label>
    <language>en_US</language>
</ListView>