force-app/main/default/objects/Transaction_Card__c/listViews/Presenter.listView-meta.xml
<ListView>
    <fullName>Presenter</fullName>
    <columns>Account_Passenger__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Of_Delivery_Device__c</columns>
    <columns>Scheduled_Return_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Addressee_Is_Presenter__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>פרזנטורים</label>
    <language>en_US</language>
</ListView>