force-app/main/default/objects/Transaction_Card__c/listViews/Refund.listView-meta.xml
<ListView>
    <fullName>Refund</fullName>
    <columns>Account_Passenger__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>All_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>צריך לזכות</value>
    </filters>
    <label>זיכויים</label>
    <language>en_US</language>
</ListView>